// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for Create section. Renders create section 1`] = `
<div
  className="makeStyles-section-3"
>
  <div
    className="makeStyles-container-1"
  >
    <div
      className="MuiGrid-root makeStyles-grid-8  MuiGrid-container"
    >
      <div
        className="MuiGrid-root makeStyles-grid-112  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 MuiGrid-grid-md-5"
      >
        <h1
          className="makeStyles-title-4"
        >
          Create your Baby Gift List
        </h1>
        <h4
          className="makeStyles-description-2"
        >
          Ewelists helps new and expecting parents get the gifts they need for their new arrival. Create a gift list, which you can share with friends and family, for free.
        </h4>
        <br />
        <div
          className="makeStyles-buttonContainer-7"
        >
          <a
            aria-disabled={false}
            className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-113 makeStyles-lg-138 makeStyles-danger-120"
            href="/signup"
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            target="_blank"
          >
            <span
              className="MuiButton-label"
            >
              Create Your List - It's Free!
            </span>
          </a>
        </div>
      </div>
      <div
        className="MuiGrid-root makeStyles-grid-112  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-7 MuiGrid-grid-md-7"
      >
        <div
          className="makeStyles-imgContainer-5"
        >
          <img
            alt="..."
            src="laptop-mockup.png"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tests for Create section. Renders create section on mobile device width 1`] = `
<div
  className="makeStyles-section-3"
>
  <div
    className="makeStyles-container-1"
  >
    <div
      className="MuiGrid-root makeStyles-grid-8  MuiGrid-container"
    >
      <div
        className="MuiGrid-root makeStyles-grid-112  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 MuiGrid-grid-md-5"
      >
        <h1
          className="makeStyles-title-4"
        >
          Create your Baby Gift List
        </h1>
        <h4
          className="makeStyles-description-2"
        >
          Ewelists helps new and expecting parents get the gifts they need for their new arrival. Create a gift list, which you can share with friends and family, for free.
        </h4>
        <br />
        <div
          className="makeStyles-imgContainer-5"
        >
          <img
            alt="..."
            src="laptop-mockup.png"
          />
        </div>
        <div
          className="makeStyles-buttonContainer-7"
        >
          <a
            aria-disabled={false}
            className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-113 makeStyles-lg-138 makeStyles-danger-120"
            href="/signup"
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            target="_blank"
          >
            <span
              className="MuiButton-label"
            >
              Create Your List - It's Free!
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </a>
        </div>
      </div>
      <div
        className="MuiGrid-root makeStyles-grid-112  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-7 MuiGrid-grid-md-7"
      />
    </div>
  </div>
</div>
`;
